--- a/AndroidClient/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidClient/app/src/main/res/navigation/nav_graph.xml
@@ -11,14 +11,14 @@
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
-            android:id="@+id/action_splashFragment_to_addressListFragment"
-            app:destination="@id/addressListFragment"
+            android:id="@+id/action_splashFragment_to_contactsListFragment"
+            app:destination="@id/contactsListFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
-        android:id="@+id/addressListFragment"
-        android:name="com.example.androidclient.AddressListFragment"
-        android:label="fragment_adress_list"
-        tools:layout="@layout/fragment_adress_list" />
+        android:id="@+id/contactsListFragment"
+        android:name="com.example.androidclient.ContactsListFragment"
+        android:label="fragment_contacts_list"
+        tools:layout="@layout/fragment_contacts_list" />
 </navigation>
