--- a/AndroidClient/app/src/main/res/menu/main_bottom_menu.xml
+++ b/AndroidClient/app/src/main/res/menu/main_bottom_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="local_contact"
-        android:icon="@mipmap/local_contact"
+        android:id="@+id/item_local_contact"
+        android:icon="@drawable/local_contact"
         android:title="本地联系人" />
     <item
-        android:id="local_contact"
-        android:icon="@mipmap/cloud_contact"
+        android:id="@+id/item_cloud_contact"
+        android:icon="@drawable/cloud_contact"
         android:title="云端联系人" />
     <item
-        android:id="local_contact"
-        android:icon="@mipmap/sync"
+        android:id="@+id/item_sync"
+        android:icon="@drawable/sync"
         android:title="同步" />
 </menu>
