--- a/AndroidClient/app/src/main/res/layout/activity_main.xml
+++ b/AndroidClient/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,22 @@
         android:textSize="30sp"
         tools:text="Welcome" />
 
-    <include layout="@layout/main_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomTab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/main_bottom_menu" />
+
+    </LinearLayout>
 </FrameLayout>
