--- a/AndroidClient/app/src/main/res/drawable/push_gradient.xml
+++ b/AndroidClient/app/src/main/res/drawable/push_gradient.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#92FFC0"
-        android:angle="-45"
-        android:endColor="#002661"
+        android:startColor="#81FFEF"
+        android:angle="45"
+        android:endColor="#F067B4"
         />
+    <corners android:radius="12dp"/>
 </shape>
