--- a/AndroidClient/app/src/main/res/layout/activity_login.xml
+++ b/AndroidClient/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="64dp"
-        android:text="Login"
+        android:text="登陆"
         android:textColor="@android:color/black"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:id="@+id/textRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="注册"
         android:textColor="@android:color/holo_orange_light"
         app:layout_constraintBottom_toBottomOf="@+id/checkBoxRemember"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
@@ -38,7 +38,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/holo_blue_light"
-        android:text="Login"
+        android:text="登陆"
         app:cornerRadius="20dp"
         app:elevation="16dp"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:checked="true"
-        android:text="Remember Me"
+        android:text="记住我"
         app:layout_constraintStart_toStartOf="@+id/inputPassword"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
